--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.4",
         "nelmio/cors-bundle": "^1.5",
+        "pomm-project/pomm-bundle": "^2.4",
         "symfony/console": "4.2.*",
         "symfony/form": "4.2.*",
         "symfony/framework-bundle": "4.2.*",
@@ -18,11 +19,17 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
+        "phpstan/phpstan": "^0.11.7",
+        "phpstan/phpstan-symfony": "^0.11.6",
         "phpunit/phpunit": "^8.1",
         "symfony/asset": "4.2.*",
+        "symfony/browser-kit": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/monolog-bundle": "^3.3",
+        "symfony/phpunit-bridge": "4.2.*",
+        "symfony/profiler-pack": "^1.0",
+        "robmorgan/phinx": "^0.10.7"
     },
     "config": {
         "preferred-install": {
