--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,22 +1,42 @@
 parameters:
-    locale: 'en'
+    locale: 'fr'
 
 services:
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: false
+        autoconfigure: false
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-#    App\:
-#        resource: '../src/*'
-#        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+    App\Application\Controller\:
+        resource: '../src/Application/Controller'
+        tags: ['controller.service_arguments']
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-#    App\Application\Controller\:
-#        resource: '../src/Controller'
-#        tags: ['controller.service_arguments']
+    ################### LISTENER ###################
+    App\Application\EventListener\ExceptionListener:
+        arguments:
+            - '@jms_serializer'
+            - '@translator.default'
+            - '@App\Infrastructure\Service\Serializer\FormErrorsSerializer'
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    ################### MODEL ###################
+    App\Infrastructure\Model\Db\PublicSchema\UserModel:
+        tags: [pomm.model]
+
+    ################### REPOSITORY ###################
+    App\Infrastructure\Repository\UserRepository:
+        arguments:
+            - '@App\Infrastructure\Model\Db\PublicSchema\UserModel'
+
+    ################### PROVIDER ###################
+    App\Infrastructure\Service\Provider\UserProvider:
+        arguments:
+            - '@App\Infrastructure\Repository\UserRepository'
+            -
+    ################### COMMAND ###################
+    App\Infrastructure\Command\Command\CommandBus:
+        arguments:
+            - '@service_container'
+
+    ################### SERIALIZER ###################
+    App\Infrastructure\Service\Serializer\FormErrorsSerializer:
