--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,10 @@
 login_check:
-    path: /login_check
-    methods: ['POST']
+    path: login_check
+    methods: 'POST'
+
+movie_read:
+    path:     api/movie/{id}
+    defaults: { _controller: 'App\Application\Controller\MovieController::read' }
+    methods:  GET
+    requirements:
+        id: \d+
