--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "nelmio/api-doc-bundle": "^3.4",
         "nelmio/cors-bundle": "^1.5",
         "pomm-project/pomm-bundle": "^2.4",
+        "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "4.3.*",
         "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
@@ -26,7 +27,6 @@
         "symfony/browser-kit": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
-        "symfony/monolog-bundle": "^3.3",
         "symfony/phpunit-bridge": "4.3.*",
         "symfony/profiler-pack": "^1.0",
         "robmorgan/phinx": "^0.10.7"
