--- a/config/services/services_command.yaml
+++ b/config/services/services_command.yaml
@@ -1,4 +1,9 @@
 services:
-    App\Infrastructure\Command\CommandBus:
+    App\Application\Command\CommandBus:
         arguments:
             - '@service_container'
+
+    App\Application\Command\Movie\MovieCreateCommandHandler:
+        public: true
+        arguments:
+            - '@App\Infrastructure\Repository\MovieRepository'
