--- a/config/services/services_command.yaml
+++ b/config/services/services_command.yaml
@@ -1,5 +1,5 @@
 services:
-    App\Infrastucture\Command\CommandBus:
+    App\Infrastructure\Command\CommandBus:
         arguments:
             - '@service_container'
 
