--- a/config/services/services_param_converter.yaml
+++ b/config/services/services_param_converter.yaml
@@ -1,6 +1,6 @@
 services:
     App\Infrastructure\ParamConverter\MovieParamConverter:
         arguments:
-            - '@App\Infrastructure\Repository\MovieRepository'
+            - '@App\Infrastructure\Repository\MovieRepositoryPomm'
         tags:
             - { name: request.param_converter, converter: movie }
