--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "willdurand/hateoas-bundle": "^2.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.15",
+        "friendsofphp/php-cs-fixer": "3.0.x-dev",
         "phpstan/phpstan": "^0.11.7",
         "phpstan/phpstan-symfony": "^0.11.6",
         "phpunit/phpunit": "^8.1",
