--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "license": "proprietary",
     "require": {
         "php": "^7.3",
+        "broadway/broadway": "^2.1",
         "jms/serializer-bundle": "^3.3",
+        "league/tactician-bundle": "^1.1",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.4",
         "nelmio/cors-bundle": "^1.5",
@@ -21,9 +23,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "3.0.x-dev",
-        "phpstan/phpstan": "^0.11.7",
-        "phpstan/phpstan-symfony": "^0.11.6",
-        "phpunit/phpunit": "^8.1",
+        "phpunit/phpunit": "^8",
         "symfony/asset": "4.3.*",
         "symfony/browser-kit": "4.3.*",
         "symfony/dotenv": "4.3.*",
