--- a/config/services/services_command.yaml
+++ b/config/services/services_command.yaml
@@ -7,6 +7,7 @@ services:
         public: true
         arguments:
             - '@App\Infrastructure\Repository\MovieRepositoryPomm'
+            - '@form.factory'
 
     App\Application\Command\Movie\MovieDeleteCommandHandler:
         public: true
