--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,14 +11,22 @@ security:
         dev:
             pattern: ^/_(profiler|wdt)
             security: false
-        main:
+        api_doc:
+            pattern:  ^/api/doc
+            stateless: true
+            anonymous: true
+        login:
+            pattern:  ^/api/login
             stateless: true
             anonymous: true
             provider: app_user_provider
             json_login:
-                check_path: /login_check
-                success_handler: lexik_jwt_authentication.handler.authentication_success
-                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                check_path:               /api/login_check
+                success_handler:          lexik_jwt_authentication.handler.authentication_success
+                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+        api:
+            pattern:   ^/api
+            stateless: true
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
