--- a/composer.json
+++ b/composer.json
@@ -4,19 +4,17 @@
     "require": {
         "php": "^7.3",
         "ext-json": "*",
-        "jms/serializer-bundle": "^3.3",
-        "lexik/jwt-authentication-bundle": "^2.6",
-        "nelmio/api-doc-bundle": "^3.4",
-        "pomm-project/pomm-bundle": "^2.4",
-        "ramsey/uuid": "^3.8",
-        "sensio/framework-extra-bundle": "^5.3",
-        "symfony/console": "4.3.*",
+        "jms/serializer-bundle": "^3",
+        "lexik/jwt-authentication-bundle": "^2",
+        "nelmio/api-doc-bundle": "^3",
+        "pomm-project/pomm-bundle": "^2",
+        "ramsey/uuid": "^3",
+        "sensio/framework-extra-bundle": "^5",
         "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
         "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
-        "symfony/validator": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/validator": "4.3.*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "3.0.x-dev",
@@ -24,9 +22,9 @@
         "symfony/asset": "4.3.*",
         "symfony/browser-kit": "4.3.*",
         "symfony/dotenv": "4.3.*",
-        "symfony/flex": "^1.1",
+        "symfony/flex": "^1",
         "symfony/phpunit-bridge": "4.3.*",
-        "symfony/profiler-pack": "^1.0",
+        "symfony/profiler-pack": "^1",
         "robmorgan/phinx": "^0.10.7"
     },
     "config": {
